Fix snow globe cutoff - adjust sizing and padding

--- a/src/index.css
+++ b/src/index.css
@@ -99,7 +99,8 @@ All colors MUST be HSL.
   display: flex;
   align-items: center;
   justify-content: flex-end;
-  padding-right: 5%;
+  padding-right: 3%;
+  padding-bottom: 2%;
   opacity: 0.8;
 }
 
@@ -117,10 +118,12 @@ All colors MUST be HSL.
 
 .snow-globe {
   display: block;
-  width: 400px;
+  width: min(350px, 30vw);
+  max-height: 80vh;
   container: snow-globe / inline-size;
   position: relative;
   pointer-events: auto;
+  transform: scale(0.9);
 }
 
 .dome {
